Added most of the required elements to the hobbies page

--- a/WebApplication1/Views/Home/Hobby.cshtml
+++ b/WebApplication1/Views/Home/Hobby.cshtml
@@ -3,4 +3,29 @@
     ViewData["Title"] = "Hobby";
 }
 
-<h1>Hobby</h1>
+<h1>Welcome to my Hobbies!</h1>
+<br />
+<h2>On this page, you will find some basic info about me. For information on hobby tutoring charges, 
+    please see the 'Calculator' tab.
+</h2>
+<br />
+<h3>Cello</h3>
+<picture>
+  <img src="~/Cello.jpg" alt="" />
+</picture>
+<p>I first began playing cello in the 5th grade. I always enjoyed it, but when I was accepted 
+    into the district orchestra in 7th grade, I discovered I was also actually relatively good
+    at the cello, which only motivated me to take it more seriously. As I entered high school,
+    I got to play in a full symphony for the first time and that is when I really fell in love
+    with music. To this day, I continue to play the cello in the BYU Philharmonic.
+</p>
+<br />
+<h3>Skiing</h3>
+<picture>
+  <img src="~/skiing.jpg" alt="" />
+</picture>
+<p>Unlike playing the cello, I did not begin skiing until after I had returned from my mission,
+    when I was 21. The first season (which began with a powder day of over 1.5 ft of powder) almost
+    made me regret buying a pass because of how bad I was. But now skiing is one of my favorite
+    hobbies, although the snow this season is making me regret buying a pass again.
+</p>
