--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2026 - Mission5Assignment
+            &copy; 2026 - Mission5Assignment (I, Ethan Grundvig, built this page)
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
