--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -11,8 +11,9 @@
     <link rel="icon" type="image/png" href="~/favicon.png" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <header>        
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-0">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Hobby">HobbyHelper</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -31,6 +32,14 @@
                 </div>
             </div>
         </nav>
+        <!-- Header banner -->
+        <div class="container-fluid bg-light py-4 mb-3">
+            <div class="container text-center">
+                <p class="text-muted mb-0">
+                    Welcome to HobbyHelper! I help hobbiests excel at skiing and cello!
+                </p>
+            </div>
+        </div>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
